<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GameActivity">

    <TextView
        android:id="@+id/tvStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="97dp"
        android:text="@string/game_stats"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="147dp"
        android:text="@string/game_welcome"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="47dp"
        android:text="@string/game_instructions"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="423dp"
        android:layout_height="13dp"
        android:layout_marginTop="16dp"
        android:background="#000000"
        android:src="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@color/colorPrimary"
        tools:srcCompat="@color/colorPrimary" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="164dp"
        android:text="@string/game_win"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStats" />

    <ImageView
        android:id="@+id/ivComputer"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="75dp"
        android:layout_marginBottom="328dp"
        android:background="@color/colorPrimaryDark"
        android:src="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivPlayer"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="328dp"
        android:background="@color/colorPrimaryDark"
        android:src="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="336dp"
        android:fontFamily="serif"
        android:text="@string/game_vs"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivPlayer"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toEndOf="@+id/ivComputer" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="81dp"
        android:layout_height="19dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="7dp"
        android:text="@string/game_computer"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivComputer" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="81dp"
        android:layout_height="19dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="75dp"
        android:text="@string/game_player"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayer" />

    <ImageButton
        android:id="@+id/btnRock"
        android:layout_width="120dp"
        android:layout_height="84dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="9dp"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/rock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnScissors"
        android:layout_width="120dp"
        android:layout_height="84dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="9dp"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/btnPaper"
        android:layout_width="120dp"
        android:layout_height="84dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="9dp"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnScissors"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnRock" />

</androidx.constraintlayout.widget.ConstraintLayout>