<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivComputer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="75dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/paper" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/game_vs"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/ivPlayer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="75dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/game_computer"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:text="@string/game_player"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>
